--- a/joinus.html
+++ b/joinus.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
 	<!-- link to styles -->
-	<link rel="stylesheet" href="/styles/style.css">
+	<link rel="stylesheet" href="https://Elir-Mahad.github.io/creativeclone/style.css">
 	
 </head>
 
@@ -28,23 +28,23 @@
 						<nav class="topnav">
 							
 							<a href="landing.html">
-								<img src="/Assets/logo.png" alt= "Bptn logo">
+								<img src="https://Elir-Mahad.github.io/creativeclone/Assets/logo.png" alt= "Bptn logo">
 							</a>
 							
 							<ul class="main-menu desk">
-								<li><a href="aboutus.html">About us</a></li>
-								<li><a href="partners.html">Partners</a></li>
-								<li><a href="team.html">The Crew</a></li>
-								<li><a href="joinus.html">Join us</a></li>
+								<li><a href="https://Elir-Mahad.github.io/creativeclone/aboutus.html">About us</a></li>
+								<li><a href="https://Elir-Mahad.github.io/creativeclone/partners.html">Partners</a></li>
+								<li><a href="https://Elir-Mahad.github.io/creativeclone/team.html">The Crew</a></li>
+								<li><a href="https://Elir-Mahad.github.io/creativeclone/joinus.html">Join us</a></li>
 							</ul>
 
 							<ul class="main-menu phone">
 								<li><a>Menu<span>▼</span></a>
 									<ul class="sub-menu">
-										<li><a href="aboutus.html">About us</a></li>
-										<li><a href="partners.html">Partners</a></li>
-										<li><a href="team.html">The Crew</a></li>
-										<li><a href="joinus.html">Join us</a></li>
+										<li><a href="https://Elir-Mahad.github.io/creativeclone/aboutus.html">About us</a></li>
+										<li><a href="https://Elir-Mahad.github.io/creativeclone/partners.html">Partners</a></li>
+										<li><a href="https://Elir-Mahad.github.io/creativeclone/team.html">The Crew</a></li>
+										<li><a href="https://Elir-Mahad.github.io/creativeclone/joinus.html">Join us</a></li>
 									</ul>		
 								</li>
 							</ul>
