--- a/partners.html
+++ b/partners.html
@@ -27,7 +27,7 @@
 
 						<nav class="topnav">
 							
-							<a href="landing.html">
+							<a href="index.html">
 								<img src="https://Elir-Mahad.github.io/creativeclone/Assets/logo.png" alt= "Bptn logo">
 							</a>
 							
