fixed all the indentation issues

--- a/joinus.html
+++ b/joinus.html
@@ -1,162 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- this makes sure that the media queries work; without it the queries will not function -->
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title> Creative Clone</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- this makes sure that the media queries work; without it the queries will not function -->
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>Creative Clone</title>
 
-	<!-- link to google fonts -->    
-	<link href="https://fonts.googleapis.com/css?family=Hind|Montserrat|Open+Sans|Roboto&display=swap" rel="stylesheet"> 
+		<!-- link to google fonts -->
+		<link
+			href="https://fonts.googleapis.com/css?family=Hind|Montserrat|Open+Sans|Roboto&display=swap"
+			rel="stylesheet"
+		/>
 
-	<!-- load in fontawesome -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+		<!-- load in fontawesome -->
+		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+			integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+			crossorigin="anonymous"
+		/>
 
-	<!-- link to styles -->
-	<link rel="stylesheet" href="https://Elir-Mahad.github.io/creativeclone/style.css">
-	
-</head>
+		<!-- link to styles -->
+		<link
+			rel="stylesheet"
+			href="https://Elir-Mahad.github.io/creativeclone/style.css"
+		/>
+	</head>
 
-<body>
+	<body>
+		<section class="firstbox">
+			<!-- This is the first box which contains the header and the top menu -->
 
-		<section class="firstbox"> <!-- This is the first box which contains the header and the top menu -->
+			<div class="topnavcontainer">
+				<div class="wrapper">
+					<nav class="topnav">
+						<a href="index.html">
+							<img
+								src="https://Elir-Mahad.github.io/creativeclone/Assets/logo.png"
+								alt="Bptn logo"
+							/>
+						</a>
 
-				<div class="topnavcontainer">
+						<ul class="main-menu desk">
+							<li>
+								<a
+									href="https://Elir-Mahad.github.io/creativeclone/aboutus.html"
+									>About us</a
+								>
+							</li>
+							<li>
+								<a
+									href="https://Elir-Mahad.github.io/creativeclone/partners.html"
+									>Partners</a
+								>
+							</li>
+							<li>
+								<a href="https://Elir-Mahad.github.io/creativeclone/team.html"
+									>The Crew</a
+								>
+							</li>
+							<li>
+								<a href="https://Elir-Mahad.github.io/creativeclone/joinus.html"
+									>Join us</a
+								>
+							</li>
+						</ul>
 
-					<div class="wrapper">
-
-						<nav class="topnav">
-							
-							<a href="index.html">
-								<img src="https://Elir-Mahad.github.io/creativeclone/Assets/logo.png" alt= "Bptn logo">
-							</a>
-							
-							<ul class="main-menu desk">
-								<li><a href="https://Elir-Mahad.github.io/creativeclone/aboutus.html">About us</a></li>
-								<li><a href="https://Elir-Mahad.github.io/creativeclone/partners.html">Partners</a></li>
-								<li><a href="https://Elir-Mahad.github.io/creativeclone/team.html">The Crew</a></li>
-								<li><a href="https://Elir-Mahad.github.io/creativeclone/joinus.html">Join us</a></li>
-							</ul>
-
-							<ul class="main-menu phone">
-								<li><a>Menu<span>▼</span></a>
-									<ul class="sub-menu">
-										<li><a href="https://Elir-Mahad.github.io/creativeclone/aboutus.html">About us</a></li>
-										<li><a href="https://Elir-Mahad.github.io/creativeclone/partners.html">Partners</a></li>
-										<li><a href="https://Elir-Mahad.github.io/creativeclone/team.html">The Crew</a></li>
-										<li><a href="https://Elir-Mahad.github.io/creativeclone/joinus.html">Join us</a></li>
-									</ul>		
-								</li>
-							</ul>
-
-						</nav>
-
-					</div>
-
+						<ul class="main-menu phone">
+							<li>
+								<a>Menu<span>▼</span></a>
+								<ul class="sub-menu">
+									<li>
+										<a
+											href="https://Elir-Mahad.github.io/creativeclone/aboutus.html"
+											>About us</a
+										>
+									</li>
+									<li>
+										<a
+											href="https://Elir-Mahad.github.io/creativeclone/partners.html"
+											>Partners</a
+										>
+									</li>
+									<li>
+										<a
+											href="https://Elir-Mahad.github.io/creativeclone/team.html"
+											>The Crew</a
+										>
+									</li>
+									<li>
+										<a
+											href="https://Elir-Mahad.github.io/creativeclone/joinus.html"
+											>Join us</a
+										>
+									</li>
+								</ul>
+							</li>
+						</ul>
+					</nav>
 				</div>
+			</div>
 
-				<header class="headhelpus"> <!-- header -->
+			<header class="headhelpus">
+				<!-- header -->
 
-					<div class="wrapper">
-
-						<div class="headertext">
-
-							<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit </h1>
-
-						</div>
-
+				<div class="wrapper">
+					<div class="headertext">
+						<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
 					</div>
-
-				</header> <!-- end of header -->
-
+				</div>
+			</header>
+			<!-- end of header -->
 		</section>
 
 		<section class="allforms">
-
 			<h2>Tell us about you and how we can help ...</h2>
 
 			<div class="wrapper">
-
 				<form class="fourboxes">
+					<div class="firstname">
+						<label for="first">First name</label>
+						<input type="text" id="firstname" name="firstname" />
+					</div>
 
-						<div class="firstname">
-							<label for="first">First name</label>
-							<input type="text" id="firstname" name="firstname">
+					<div class="lastname">
+						<label for="lastname">Last name</label>
+						<input type="text" id="lastname" name="lastname" />
+					</div>
+
+					<div class="mail">
+						<label for="email">Email</label>
+						<input type="email" id="email" name="email" />
+					</div>
+
+					<div class="companyname">
+						<label for="companyname">Company name </label>
+						<input type="companyname" id="companyname" name="companyname" />
+					</div>
+
+					<div class="job">
+						<label for="jobtitle">Job Title</label>
+						<input type="jobtitle" id="jobtitle" name="jobtitle" />
+					</div>
+
+					<div class="number">
+						<label for="phonenumber">Phone number</label>
+						<input type="phonenumber" id="phonenumber" name="phonenumber" />
+					</div>
+
+					<div class="countryregion">
+						<label for="Countryregion">Country Region</label>
+						<input
+							type="Countryregion"
+							id="Countryregion"
+							name="Countryregion"
+						/>
+					</div>
+
+					<div class="dropdowns">
+						<div class="firstdropdown">
+							<label for="curious">I'm curious about ...</label>
+							<select class="dropdown">
+								<option value="pleaseselect" selected>Please select</option>
+								<option value="accquisition">
+									tempus quam pellentesque nec
+								</option>
+								<option value="retentions">Auctor neque vitae tempus </option>
+								<option value="branding"
+									>vitae tempus quam pellentesque nec</option
+								>
+								<option value="other">Other</option>
+							</select>
 						</div>
 
-						<div class="lastname">
-							<label for="lastname">Last name</label>
-							<input type="text" id="lastname" name="lastname">
+						<div class="seconddropdown">
+							<label for="communicationmethod">
+								What is your preferred method of communication?</label
+							>
+							<select name="dropdown">
+								<option value="pleaseselect" selected>Please select</option>
+								<option value="accquisition">Phone </option>
+								<option value="retentions">Email </option>
+								<option value="branding">Both</option>
+							</select>
 						</div>
 
-						<div class="mail">
-							<label for="email">Email</label>
-							<input type="email" id="email" name="email">
-						</div>
-
-						<div class="companyname">
-							<label for="companyname">Company name </label>
-							<input type="companyname" id="companyname" name="companyname">
-						</div>
-
-						<div class="job">
-							<label for="jobtitle">Job Title</label>
-							<input type="jobtitle" id="jobtitle" name="jobtitle">
-						</div>
-
-						<div class="number">
-							<label for="phonenumber">Phone number</label>
-							<input type="phonenumber" id="phonenumber" name="phonenumber">
-						</div>
-
-						<div class="countryregion">
-							<label for="Countryregion">Country Region</label>
-							<input type="Countryregion" id="Countryregion" name="Countryregion">
-						</div>
-
-						<div class="dropdowns">
-
-							<div class="firstdropdown">
-								<label for="curious">I'm curious about ...</label>
-                                    <select class="dropdown">
-                                        <option value="pleaseselect"selected>Please select</option>
-                                        <option value="accquisition"> tempus quam pellentesque nec </option>
-                                        <option value="retentions">Auctor neque vitae tempus </option>
-                                        <option value="branding">vitae tempus quam pellentesque nec</option>
-                                        <option value="other">Other</option>
-                                    </select>
-
-							</div>
-
-							<div class="seconddropdown">
-								<label for="communicationmethod"> What is your preferred method of communication?</label>
-								<select name="dropdown">
-										<option value="pleaseselect"selected>Please select</option>
-										<option value="accquisition">Phone </option>
-										<option value="retentions">Email </option>
-										<option value="branding">Both</option>
-								</select>
-
-							</div>
-
-							<button> Submit </button>
-
-						</div>
-
+						<button>Submit</button>
+					</div>
 				</form>
-
 			</div>
-
 		</section>
 
 		<footer>
-
 			<div class="wrapper">
-
-				<p> Copyright 2020 <span>Imitation leads to Innovation</span> All Rights Reserved</p>
-		
+				<p>
+					Copyright 2020 <span>Imitation leads to Innovation</span> All Rights
+					Reserved
+				</p>
 			</div>
-
 		</footer>
-
-</body>
+	</body>
+</html>
