added all the alt tags for all the images and improved the indentation

--- a/aboutus.html
+++ b/aboutus.html
@@ -38,7 +38,7 @@
 						<a href="index.html">
 							<img
 								src="https://Elir-Mahad.github.io/creativeclone/Assets/logo.png"
-								alt="Bptn logo"
+								alt="logo"
 							/>
 						</a>
 
@@ -141,7 +141,7 @@
 							<div class="image">
 								<img
 									src="https://Elir-Mahad.github.io/creativeclone/Assets/aboutus1.jpg"
-									alt=" group of people who are camping"
+									alt=" group of people who are standing in a room listening to a man speaking"
 								/>
 							</div>
 
@@ -159,7 +159,7 @@
 							<div class="image">
 								<img
 									src="https://Elir-Mahad.github.io/creativeclone/Assets/aboutus2.jpg"
-									alt=" group of people who are camping"
+									alt=" a huge conference room with a lot of people, one woman has her fist raised"
 								/>
 							</div>
 
@@ -177,7 +177,7 @@
 							<div class="image">
 								<img
 									src="https://Elir-Mahad.github.io/creativeclone/Assets/aboutus3.jpg"
-									alt=" group of people who are camping"
+									alt=" a meeting room with 10 people. Some are smiling, others are raising their hands"
 								/>
 							</div>
 
@@ -195,7 +195,7 @@
 							<div class="image">
 								<img
 									src="https://Elir-Mahad.github.io/creativeclone/Assets/aboutus4.jpg"
-									alt=" group of people who are camping"
+									alt=" people sitting in a conference room looking straight ahead"
 								/>
 							</div>
 
