--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<a href="index.html">
 							<img
 								src="https://Elir-Mahad.github.io/creativeclone/Assets/logo.png"
-								alt="Bptn logo"
+								alt="logo"
 							/>
 						</a>
 
@@ -123,7 +123,7 @@
 						<div class="image">
 							<img
 								src="https://Elir-Mahad.github.io/creativeclone/Assets/keyboard.png"
-								alt=" x "
+								alt=" key board with a person typing "
 							/>
 						</div>
 
@@ -141,7 +141,7 @@
 						<div class="image">
 							<img
 								src="https://Elir-Mahad.github.io/creativeclone/Assets/settings.png"
-								alt=" x "
+								alt=" a screw driver, it represents the idea of 'settings' "
 							/>
 						</div>
 
@@ -159,7 +159,7 @@
 						<div class="image">
 							<img
 								src="https://Elir-Mahad.github.io/creativeclone/Assets/find.png"
-								alt=" x "
+								alt=" a maginifying glass, it represents the idea of 'searching' "
 							/>
 						</div>
 
