--- a/joinus.html
+++ b/joinus.html
@@ -38,7 +38,7 @@
 						<a href="index.html">
 							<img
 								src="https://Elir-Mahad.github.io/creativeclone/Assets/logo.png"
-								alt="Bptn logo"
+								alt="logo"
 							/>
 						</a>
 
