--- a/partners.html
+++ b/partners.html
@@ -38,7 +38,7 @@
 						<a href="index.html">
 							<img
 								src="https://Elir-Mahad.github.io/creativeclone/Assets/logo.png"
-								alt="Bptn logo"
+								alt="logo"
 							/>
 						</a>
 
@@ -173,7 +173,7 @@
 						<div class="image">
 							<img
 								src="https://Elir-Mahad.github.io/creativeclone/Assets/partnerbigpic.jpg"
-								alt=" group of people who are camping"
+								alt=" two guys in a cafe, one guy has a laptop, they are both smiling"
 							/>
 						</div>
 
@@ -217,6 +217,7 @@
 					<div class="image">
 						<img
 							src="https://Elir-Mahad.github.io/creativeclone/Assets/partnersgirlface.jpg"
+							alt="a beautiful girl - this is a profile picture"
 						/>
 
 						<div class="nameandjob">
@@ -230,6 +231,7 @@
 					<div class="image">
 						<img
 							src="https://Elir-Mahad.github.io/creativeclone/Assets/partnersboyface.jpg"
+							alt="a handsome man - this a profile picture"
 						/>
 
 						<div class="nameandjob">
@@ -321,6 +323,7 @@
 					<div class="fimage">
 						<img
 							src="https://Elir-Mahad.github.io/creativeclone/Assets/partnerschat.jpg"
+							alt=" a black person shaking a white persons hand"
 						/>
 					</div>
 				</section>
