--- a/team.html
+++ b/team.html
@@ -38,7 +38,7 @@
 						<a href="index.html">
 							<img
 								src="https://Elir-Mahad.github.io/creativeclone/Assets/logo.png"
-								alt="Bptn logo"
+								alt="logo"
 							/>
 						</a>
 
@@ -122,6 +122,7 @@
 					<div class="colorlogo">
 						<img
 							src="https://Elir-Mahad.github.io/creativeclone/Assets/logo.png"
+							alt="logo"
 						/>
 					</div>
 
@@ -141,7 +142,7 @@
 								<img
 									class="headshot"
 									src="https://Elir-Mahad.github.io/creativeclone/Assets/manface1.jpg"
-									alt=" group of people who are camping"
+									alt=" a handsome asian man"
 								/>
 							</div>
 
@@ -157,7 +158,7 @@
 								<img
 									class="headshot"
 									src="https://Elir-Mahad.github.io/creativeclone/Assets/womanface1.jpg"
-									alt=" group of people who are camping"
+									alt=" a beautiful black woman"
 								/>
 							</div>
 
@@ -173,7 +174,7 @@
 								<img
 									class="headshot"
 									src="https://Elir-Mahad.github.io/creativeclone/Assets/manfac2.jpg"
-									alt=" group of people who are camping"
+									alt=" a handsome man "
 								/>
 							</div>
 
@@ -189,7 +190,7 @@
 								<img
 									class="headshot"
 									src="https://Elir-Mahad.github.io/creativeclone/Assets/womanface2.jpg"
-									alt=" group of people who are camping"
+									alt=" a serious white girl"
 								/>
 							</div>
 
@@ -205,7 +206,7 @@
 								<img
 									class="headshot"
 									src="https://Elir-Mahad.github.io/creativeclone/Assets/manface3.jpg"
-									alt=" group of people who are camping"
+									alt=" a man wearing a yellow turban"
 								/>
 							</div>
 
@@ -221,7 +222,7 @@
 								<img
 									class="headshot"
 									src="https://Elir-Mahad.github.io/creativeclone/Assets/womanface3.jpg"
-									alt=" group of people who are camping"
+									alt=" a cute asian girl "
 								/>
 							</div>
 
